--- a/index.html
+++ b/index.html
@@ -101,7 +101,7 @@
                         <h1 class="home__title">Heya, I am Shrey</h1>
                         <h3 class="home__subtitle">Artificial-intelligence Engineer</h3>
                         <p class="home__description">Developer with Idea Developement Skills and having knowledge of
-                            Team Management and Entreaupenurship</p>
+                            Team Management and Entrepreneurship</p>
                         <a href="#contact" class="button button--flex">
                             Contact Me <i class="uil uil-message button__icon"></i>
                         </a>
