--- a/index.html
+++ b/index.html
@@ -141,7 +141,7 @@
                         </div>
                     </div>
                     <div class="about__buttons">
-                        <a download="" href="./PDF/Resume_Shrey Pandey(1).pdf" class="button button--flex">
+                        <a download="" href="./PDF/ShreyPandey_Resume.pdf" class="button button--flex">
                             Download CV <i class="uil uil-download-alt button__icon"></i>
                         </a>
                     </div>
