--- a/index.html
+++ b/index.html
@@ -509,10 +509,10 @@
                     <div class="portfolio__content grid swiper-slide">
                         <img src="./Assets/IMG/portfolio2.jpg" alt="" class="portfolio__img">
                         <div class="portfolio__data">
-                            <h3 class="portfolio__title">Note Taking App</h3>
-                            <p class="portfolio__description"> Note Taking App with advance search and delete option
+                            <h3 class="portfolio__title">Muscle TV</h3>
+                            <p class="portfolio__description"> All in One Fitness Platform with Thousand of exercises and videos for each Body Part
                             </p>
-                            <a href="#" class="button button--flex button--small portfolio__button">
+                            <a href="https://muscletv.netlify.app/" class="button button--flex button--small portfolio__button">
                                 Demo
                                 <i class="uil uil-arrow-right button__icon"></i>
                             </a>
