--- a/index.html
+++ b/index.html
@@ -99,7 +99,7 @@
                     </div>
                     <div class="home__data">
                         <h1 class="home__title">Heya, I am Shrey</h1>
-                        <h3 class="home__subtitle">Artificial-intelligence Engineer</h3>
+                        <h3 class="home__subtitle">Software Engineer at ZS</h3>
                         <p class="home__description">Developer with Idea Developement Skills and having knowledge of
                             Team Management and Entrepreneurship</p>
                         <a href="#contact" class="button button--flex">
