--- a/index.html
+++ b/index.html
@@ -124,7 +124,7 @@
                 <img src="./Assets/IMG/about.jpg" alt="" class="about__img">
                 <div class="about__data">
                     <p class="about__description">
-                       Software Engineer writing automation codes for End to End Test Cases along with UI Developement.
+                       Software Engineer writing automation codes for End to End Test Cases along with UI Developement
                     </p>
                     <div class="about__info">
                         <div>
